--- a/src/assets/Css/home/Home.css
+++ b/src/assets/Css/home/Home.css
@@ -23,6 +23,7 @@
     width: 90%;
     margin: 20px auto;
     padding-inline: 10%;
+    font-size: 125%;
   }
   
   .row {
@@ -47,12 +48,16 @@
     border-radius: 8px;
     overflow: hidden;
     cursor: pointer;
-    box-shadow: 0px 3px 7px 2px rgba(5, 3, 22, 0.15);
+    border: 2px solid #412424; /* Adiciona uma borda branca */
+    border-radius: 15px; /* Borda arredondada */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Sombra suave */
   }
   
   .card img {
-    width: 100%;
+    width: 101%;
     height: auto;
+    margin-top: -1px;
+    
   }
   
   .card-body {
@@ -60,8 +65,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
   }
   
+  .card-body h6 {
+    text-align: center;
+  }
+
+  .card-body p {
+    text-align: center;
+    font-size: 15px;
+  }
+
+ 
   .footer-home {
     text-align: center;
     margin-top: auto;
